# faraday

./: .gitignore  build.py  cabal-wasm.project  cabal.project  flake.nix  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
conf/: cabal-config  mentat.cabal
site/: index.html
site/static/: styles.css
src/: index.ts
src/app/: canvas.ts  faraday.tsx  index.tsx  mentat-interop.d.ts  mentat-interop.js  mentat.ts
src/app/wasm/: mentat-interop.wasm
src/frontend/: index.ts
src/mentat-wasm/: mentat-wasm.cabal  wasm-init.c
src/mentat-wasm/src/: Main.hs  MentatInterface.hs
src/mentat/lib/: Mentat.hs
src/mentat/lib/Mentat/: ConstraintParser.hs  Evaluator.hs  ExpressionParser.hs  FunctionBuilder.hs  Lexer.hs  ParseTypes.hs  Program.hs  ProgramTypes.hs  SyntaxParser.hs  Validator.hs
src/public/: index.html
test/mentat/: EvaluatorSpec.hs  FunctionBuilderSpec.hs  LexerSpec.hs  SyntaxParserSpec.hs  TokenizerSpec.hs  ValidatorSpec.hs
test/mentat-wasm/: mentat-interface.test.ts  mentat-interop.wasm  wasm_pkg.test.ts
