cabal-version:          3.0
name:                   mentat-wasm
version:                0.1.0

executable mentat-wasm
    hs-source-dirs:     src
    main-is:            MentatInterface.hs
    build-depends:      base >4.17 && <5
                    ,   Mentat
                    ,   text
                    ,   aeson

    default-language:   Haskell2010

